@@ -1,3 +1,4 @@
+- do not allow to upgrade i586->x86_64 or x86_64->i586 (#33370)
 - do not configure "windows" bootloader entries for "hidden" partitions
 - fix unwrapped label (#33243)
 - fix grub hanging if /boot on xfs (#33267)
